# 2024_AI_Challenge--LazyDevs-

./: .gitignore  .~lock.2024 AI Challenge - VoicedOver LazyDevs.docx#  2024 AI Challenge - VoicedOver LazyDevs.docx  README.md
voicedover/: .env  lxml-5.2.1-cp312-cp312-win_amd64.whl  pyproject.toml
voicedover/voicedover/: .env  controllers.py  frontend.py  main.py  openai_assistant.py  speakerEmbedding.py  tempCodeRunnerFile.py  testingTTS.py  testingTTS2.py
