[tool.poetry]
name = "voicedover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
openai = "^1.23.6"
python-dotenv = "^1.0.1"
python-docx = "^1.1.0"
pydantic = "^2.7.1"
streamlit = "^1.33.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
transformers = "^4.40.1"
sentencepiece = "^0.2.0"
datasets = {extras = ["audio"], version = "^2.19.0"}
speechbrain = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
